fix(button,button-toggle): ripples not clipping correctly in safari
Fixes the ripples on buttons and button toggles not being clipped to the border radius in Safari.

Relates to #12244.

--- a/src/material/button-toggle/button-toggle.scss
+++ b/src/material/button-toggle/button-toggle.scss
@@ -19,6 +19,9 @@ $mat-button-toggle-legacy-border-radius: 2px !default;
   border-radius: $mat-button-toggle-legacy-border-radius;
   -webkit-tap-highlight-color: transparent;
 
+  // Fixes the ripples not being clipped to the border radius on Safari.
+  transform: translateZ(0);
+
   @include cdk-high-contrast(active, off) {
     outline: solid 1px;
   }
